# djdt-permissions

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  tox.ini
djdt_permissions/: __init__.py  apps.py  tests.py
djdt_permissions/panels/: __init__.py  permissions_panel.py
djdt_permissions/templates/djdt_permissions/: group_tr.html  permissions_panel.html
djdt_permissions/tests/: test_permissions_panel.py
test_project/: asgi.py  settings.py  urls.py  wsgi.py
test_project/templates/test_project/: homepage.html
