[tool.poetry]
name = "djdt-permissions"
version = "0.9.1"
description = "A panel for Django Debug Toolbar (DjDT) to display the current user's permissions."
authors = ["Alain Baudhuin <alain.baudhuin@skynet.be>"]
readme = "README.md"
packages = [{include = "djdt_permissions"}]

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.2, <=4.2.*"
django-debug-toolbar = ">=4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
